# KEN-E-public

./: .gitignore  ACCOUNT_CREATION_ISSUES.md  ACCOUNT_CREATION_STATUS_POLLING_ISSUE.md  ADK_ARCHITECTURE.md  ADK_USAGE_DOCUMENTATION.md  ADK_USAGE_DOCUMENTATION_v2.md  AGENT_SEPARATION_IMPLEMENTATION_PLAN.md  CLAUDE.md  CLAUDE.md.bak  COMPETITIVE_FRONTEND_PROGRESS.md  COMPETITIVE_STRATEGY_FRONTEND_NOTES.md  DEBUGGING_SESSION_CONTEXT.md  ENVIRONMENT_SETUP.md  GOOGLE_ANALYTICS_OAUTH_SETUP.md  IMPLEMENTATION_PLAN.md  KEN_E____ADK____Iterative_Strategy_Agent.ipynb  LAYOUT-HORIZONTAL-NAV-REFACTOR-PLAN.md  LICENSE  MEMORYSTORE_REDIS_SETUP.md  Makefile  PERMISSION_SYSTEM_CLEANUP.md  PRODUCT_NETWORK_DIAGRAM_PLAN.md  PR_166_REVIEW.md  PR_167_REVIEW.md  PR_187_REVIEW_RESPONSE.md  PR_198_BREAKING_CHANGES.md  PR_SPLIT_PLAN.md  REACT_FLOW_NODE_SPACING_RECOMMENDATION.md  README.md  REFACTORING_ROADMAP_CompetitorsManagement.md  RESTART_FRONTEND.sh  REVIEW.md  ROLLUP_FEATURE_SESSION_SUMMARY.md  ROLLUP_MARKETING_STRATEGY_IMPLEMENTATION_PLAN.md  SELECTIVE_STRATEGY_IMPLEMENTATION_STATUS.md  STRATEGY_AGENT_DOCUMENTATION.md  STRATEGY_AGENT_IMPLEMENTATION_PLAN.md  STRATEGY_AGENT_V2_IMPLEMENTATION.md  STRATEGY_AGENT_V3_IMPLEMENTATION.md  SUBSCRIPTION_PLANS_CACHING.md  (+10 more)
api/: .dockerignore  .env.example  .gitignore  API_MIGRATION_SUMMARY.md  BREAKING_CHANGES.md  CLAUDE.md  CREDENTIALS_SETUP.md  Dockerfile  EMAIL_SERVICE_SETUP.md  ENVIRONMENT.md  FIRESTORE_INTEGRATION.md  IMPLEMENTATION_SUMMARY.md  NOTIFICATION_ICON_MAPPING.md  README-SERVICE-ACCOUNT.md  README.md  SECURITY_ALERT_SERVICE_ACCOUNTS.md  SUPERSET_INTEGRATION.md  TROUBLESHOOTING_503_STAGING.md  check_422_debug.py  check_account_creation_flow.py  check_account_creation_with_file.py  check_endpoint_422.py  check_fastapi_union.py  check_form_endpoint.py  check_multipart_upload.py  check_neo4j_account_creation.py  check_openapi_schema.py  check_recaptcha.py  check_strategy_docs.py  cli_manager.py  debug_recaptcha.py  deployment_fixed_model.txt  deployment_logging_test.txt  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  docker.sh  google-cloud-service-account-key.json.template  inspect_adk_session.py  main.py  (+22 more)
api/docs/: AUTHENTICATION.md
api/scripts/: README_MIGRATION.md  add_act_00_to_firestore.py  audit_org_accounts_field.py  backfill_mcp_servers_specialist_categories.py  chat_adk_session_orphan_scan.py  chat_artifact_orphan_scan.py  check_account_creation_direct.py  check_account_creation_flow.py  check_account_creation_timeout.py  check_account_marketing_channels.py  check_activity_logs.py  check_adc.py  check_agent_chat.py  check_api_startup.py  check_cascade_delete.py  check_complete_invitation_flow.py  check_conversation_persistence.py  check_create_account_with_regions.py  check_create_organization.py  check_env_loading.py  check_error_handling.py  check_frontend_history_format.py  check_invitation_flow.py  check_logs_neo4j.py  check_mark_as_read.py  check_marketing_channels_update.py  check_neo4j_accounts.py  check_neo4j_connection.py  check_neo4j_connectivity.py  check_notification_creation.py  check_notification_fix.py  check_notifications_dev.py  check_org_creation_cache.py  check_progress_tracking.py  check_reasoning_engine_methods.py  check_recent_notifications.py  check_redis_production.py  check_sendgrid_invitation.py  check_sendgrid_production.py  check_service_account.py  (+86 more)
api/tests/: MANUAL_TESTING_GUIDE_1_7_2.md  conftest.py  test_account_access_super_admin_protection.py  test_account_creation_integration.py  test_account_id_generation.py  test_account_org.py  test_account_permissions.py  test_account_tools_service.py  test_accounts.py  test_accounts_activity_logs.py  test_accounts_cascade_delete.py  test_activities.py  test_activities_sync.py  test_activities_sync_units.py  test_admin_super_admins.py  test_agent_config_models.py  test_agent_configs.py  test_auth.py  test_auth_endpoints.py  test_auth_models.py  test_auth_rate_limiting.py  test_auth_rate_limiting_improved.py  test_bigquery.py  test_cache.py  test_chat_authorization.py  test_chat_json_filtering.py  test_chat_session_activity.py  test_chat_session_recovery.py  test_check_account_access.py  test_check_graph_access.py  test_competitive_endpoints.py  test_config_audit.py  test_cors_config.py  test_cross_org_isolation_account_tools.py  test_cross_org_isolation_accounts.py  test_cross_org_isolation_agent_configs.py  test_cross_org_isolation_chat.py  test_cross_org_isolation_marketing.py  test_cross_org_isolation_mcp.py  test_cross_org_isolation_monitoring_topics.py  (+58 more)
app/adk/: .agent_engine_config.json  .env.development  .env.example  .env.production  .env.staging  ADK_DEPLOYMENT_GUIDELINES.md  CODE_QUALITY_IMPROVEMENT_PLAN.md  DEPENDENCY_INJECTION_DESIGN.md  DEPLOYMENT_GUIDE.md  FIXES_APPLIED.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_TIMELINE.md  MARKETING_STRATEGY_ISSUE.md  Makefile  PRODUCTION_INTEGRATION.md  PYDANTIC_VALIDATION_RECOMMENDATIONS.md  README.md  REFACTORING_PLAN.md  STRATEGY_AGENT_FLOW.md  WORKING_VS_BROKEN_PATTERNS.md  adk_deployment_metadata.json  agent.py  agent_standalone.py  agent_standalone_embedded.py  check_agent_json_output.py  check_agent_local.py  check_direct_execution.py  check_inline_parser.py  cleanup_dev_engines.py  cleanup_firestore_code.py  cleanup_reasoning_engines.py  complete_refactor.py  conftest.py  create_strategy_docs.py  deploy_agent.py  deploy_embedded.py  deploy_ken_e.py  deploy_ken_e_today.py  deploy_packaging.py  deploy_pydantic_agents.py  (+30 more)
app/simple_company_chatbot/: .env.example  INTEGRATION_SUMMARY.md  agent.py  agent_standalone.py  deploy_with_strategy.py  pyproject.toml  requirements.txt  strategy_supervisor.py
shared/: __init__.py  account_id_utils.py  agent_tool_limits.py  artifact_models.py  chat_artifacts.py  context_utils.py  mcp_connection_config.py  pyproject.toml  secrets.py  structured_logging.py  supported_models.py  token_accounting.py  token_utils.py  trace_metadata.py  turn_delta.py
shared/tests/: test_account_id_utils.py  test_artifact_models.py  test_context_utils_query.py  (+1 more)
(+2107 files in other folders)
