[project]
name = "ken-e"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name", email = "your@email.com"},
]
dependencies = [
    "opentelemetry-exporter-gcp-trace>=1.9.0",
    "google-cloud-logging>=3.11.4",
    "google-cloud-aiplatform[evaluation,reasoningengine]>=1.118.0",
    "google-adk>=1.27.4",
    "firebase-admin>=6.7.0",
    "google-cloud-secret-manager>=2.24.0",
    "weave>=0.51.0,<0.51.57",  # pinned: polyfile-weave breaks Agent Engine (see docs/spike-otel-pydantic-findings.md)
    "gql<4",  # pinned: gql 4.0 breaks weave 0.51.x (wandb/weave#5288)
    "wandb>=0.19.1",
    "ruff>=0.9.7",
    "python-dotenv>=1.0.0",
]

requires-python = ">=3.13,<3.14"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.23.8",
    "pytest-httpx>=0.30",     # stability harness — diverse_invocation_runner tests
    "nest-asyncio>=1.6.0",
    "codespell>=2.2.6",
    "mypy>=1.15.0",
    "psutil>=5.9.0",          # stability harness — memory_profiler RSS sampling
    "redis>=5.0.0",           # stability harness — redis_ttl_fixture; api/ also uses redis
]

[project.optional-dependencies]
jupyter = [
    "jupyter~=1.0.0",
]
lint = [
    "ruff>=0.4.6",
    "mypy~=1.15.0",
    "codespell~=2.2.0",
    "types-pyyaml~=6.0.12.20240917",
    "types-requests~=2.32.0.20240914",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "C",  # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP", # pyupgrade
    "RUF", # ruff specific rules
]
ignore = ["E501", "C901", "B008"] # ignore line too long, too complex, function call in arg defaults (FastAPI pattern)

[tool.ruff.lint.isort]
known-first-party = ["app", "frontend", "shared"]

[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
check_untyped_defs = true
disallow_subclassing_any = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
follow_imports = "silent"
ignore_missing_imports = true
explicit_package_bases = true
disable_error_code = ["misc", "no-untyped-call", "no-any-return"]

exclude = [".venv"]

[tool.codespell]
ignore-words-list = "rouge"

skip = "./locust_env/*,uv.lock,.venv,**/*.ipynb"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.pytest.ini_options]
pythonpath = "."
addopts = "--ignore=tests/unit/test_audit_service.py --ignore=tests/unit/test_strategy_access_control.py --ignore=tests/unit/test_strategy_agent_v3.py --ignore=tests/unit/test_strategy_v3_models.py"

[tool.hatch.build.targets.wheel]
packages = ["frontend"]
