[project]
name = "kene-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "neo4j>=5.28.1",
    "pydantic>=2.11.5",
    "python-dotenv>=1.1.0",
    "uvicorn[standard]>=0.34.3",
    "requests>=2.32.0",
    "rich>=13.0.0",
    "httpx>=0.28.1",
    "python-dateutil>=2.9.0.post0",
    "python-multipart>=0.0.20",
    "google-cloud-firestore>=2.21.0",
    "sendgrid>=6.11.0",
    "jinja2>=3.1.2",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.2.0",
    "httpx>=0.28.1",
    "hypothesis>=6.100.0",
    "isort>=6.0.1",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.11.12",
]
