[project]
name = "kene-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
# Python 3.13 not yet supported due to compatibility issues with:
# - google-cloud-aiplatform and Vertex AI dependencies
# - Some type hint syntax changes requiring code updates
# Timeline: Will add 3.13 support once all GCP dependencies are verified compatible
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115.12",
    "neo4j>=5.28.1",
    "pydantic[email]>=2.11.5",
    "python-dotenv>=1.1.0",
    "uvicorn[standard]>=0.34.3",
    "requests>=2.32.0",
    "rich>=13.0.0",
    "httpx>=0.28.1",
    "python-dateutil>=2.9.0.post0",
    "python-multipart>=0.0.20",
    "google-cloud-firestore>=2.23.0",
    "google-cloud-secret-manager>=2.26.0",
    "google-cloud-storage>=3.9.0",
    "google-cloud-bigquery>=3.40.0",
    "google-cloud-aiplatform>=1.140.0",
    "sendgrid>=6.11.0",
    "jinja2>=3.1.2",
    "firebase-admin>=6.1.0",
    "redis>=5.0.0",
    "google-adk==1.27.5",  # TODO(SK-10): unpin to >=1.27.5 after spike branch deletion. Aligned with root pyproject.toml pin (SK-32).
    "weave>=0.51.0,<0.51.57",  # pinned: polyfile-weave breaks Agent Engine (see docs/spike-otel-pydantic-findings.md)
    "gql<4",  # pinned: gql 4.0 breaks weave 0.51.x (wandb/weave#5288)
    "wandb>=0.21.1",
    "importlib-metadata<8.0",
    "prometheus-client>=0.19.0",
    "shared",
]

[tool.uv.sources]
# Editable so additions to ``shared/`` are picked up without a manual
# ``uv sync --reinstall-package shared``. Without this, adding a new module
# under ``shared/`` (e.g. ``shared/agent_tool_limits.py``) builds and installs
# a frozen copy into the venv, and new files don't surface until the next
# explicit reinstall. The path source remains the same — only the install
# mode changes.
shared = { path = "../shared", editable = true }

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.2.0",
    "httpx>=0.28.1",
    "hypothesis>=6.100.0",
    "isort>=6.0.1",
    "psutil>=7.2.2",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "pytest-httpx>=0.35.0",
    "ruff>=0.11.12",
]
