[project]
name = "shared"
version = "0.1.0"
description = "Shared utilities for KEN-E services"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["shared"]

[tool.setuptools.package-dir]
shared = "."
