[project]
name = "company-news-chatbot"
version = "0.1.0"
description = "Simple company news chatbot using ADK and Vertex AI Search"
requires-python = ">=3.13,<3.14"
dependencies = [
    "baml-py>=0.207.1",
    "google-adk[mcp]==2.0.0",  # [mcp] extra is load-bearing: ADK 2.0 demoted `mcp` from a core dep to the `[mcp]` extra; the GA specialist needs it for its live MCP/SSE connection (without it `import mcp` fails only at runtime on Agent Engine). Bumped to 2.0.0 in AH-105 (AH-PRD-13 Foundation). app/adk/requirements.txt MUST match the pyproject pin and uv.lock — version skew breaks Agent Engine deploy with an opaque 400/500 and a ReasoningEngine ModuleNotFoundError that only surfaces in Cloud Logging.
    "google-cloud-aiplatform>=1.140.0",
    "google-cloud-firestore>=2.23.0",
    "neo4j>=5.14.0",
    "openai>=1.0.0",
    "pypdf2>=3.0.1",
    "python-dotenv",
    "requests>=2.32.4",
    "wandb>=0.22.2",
    "weave>=0.51.0,<0.51.57",  # pinned: 0.51.57+ adds polyfile-weave which has broken kaitai parsers that fail Agent Engine compileall on ALL Python versions
    "gql<4",  # pinned: gql 4.0 breaks weave 0.51.x (wandb/weave#5288); fix is in weave 0.52.1+ but blocked by polyfile
]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
]

# Remove the tool.adk section - let's try without it first